src/objects/ACCL__Tactic_Template__c.object
<CustomObject>
    <description>Template which controls the behaviour of a tactic</description>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates wether a tactic template is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Additional_Condition_KPI_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to additional KPI Definition 1 for Condition</description>
        <label>Additional Condition KPI 1</label>
        <referenceTo>ACCL__KPI_Definition__c</referenceTo>
        <relationshipLabel>Tactic Templates (Additional Condition KPI 1)</relationshipLabel>
        <relationshipName>Tactic_Templates_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Additional_Condition_KPI_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to additional KPI Definition 2 for Condition</description>
        <label>Additional Condition KPI 2</label>
        <referenceTo>ACCL__KPI_Definition__c</referenceTo>
        <relationshipLabel>Tactic Templates (Additional Condition KPI 2)</relationshipLabel>
        <relationshipName>Tactic_Templates_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Additional_Condition_KPI_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to additional KPI Definition 3 for Condition</description>
        <label>Additional Condition KPI 3</label>
        <referenceTo>ACCL__KPI_Definition__c</referenceTo>
        <relationshipLabel>Tactic Templates (Additional Condition KPI 3)</relationshipLabel>
        <relationshipName>Tactic_Templates_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Condition_Change_Rule__c</fullName>
        <description>Determines the rule to handle past conditions.</description>
        <label>Condition Change Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>update</fullName>
                </value>
                <value>
                    <fullName>finish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Condition_Creation_Definition_Level__c</fullName>
        <description>Defines which configuration is used to create conditions out of tactics.</description>
        <inlineHelpText>Defines if tactics of this type generate conditions based on their template or based on their own configuration.</inlineHelpText>
        <label>Condition Creation Definition Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tactic</fullName>
                </value>
                <value>
                    <fullName>TacticTemplate</fullName>
                    <label>Tactic Template</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Condition_Product_Group_Level__c</fullName>
        <description>Specifies the product level at which the condition can be set.</description>
        <label>Condition Product Group Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>SubCategory</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Flavor</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Condition_Source_Kpi_Name__c</fullName>
        <description>KPI Source Definition Name</description>
        <formula>ACCL__Condition_Source_Kpi__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Condition Source Kpi Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Condition_Source_Kpi__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a KPI Definition.</description>
        <label>Condition Source KPI</label>
        <referenceTo>ACCL__KPI_Definition__c</referenceTo>
        <relationshipLabel>Tactic Templates</relationshipLabel>
        <relationshipName>Tactic_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Default_Lift_Type__c</fullName>
        <label>Default Lift Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ACCL__Possible_Lift_Types__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                    <default>true</default>
                    <label>Percentage</label>
                </value>
                <value>
                    <fullName>Absolute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Holds the description of language 1.</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Holds the description of language 2.</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Holds the description of language 3.</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Sets the description depending on the current language.</description>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
ACCL__Description_Language_1__c)</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Display_KPI_Subset__c</fullName>
        <description>Subset of kpis that are displayed in the Spend Planning Card</description>
        <label>Display KPI Subset in SPC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>SPC</fullName>
                    <default>true</default>
                    <label>SPC</label>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>VPC</fullName>
                </value>
                <value>
                    <fullName>PromotionScenarios</fullName>
                    <label>Promotion Scenarios</label>
                </value>
                <value>
                    <fullName>SPCLumpSum</fullName>
                </value>
                <value>
                    <fullName>SPCPR</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Enable_Condition_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the condition creation is enabled.</description>
        <label>Enable Condition Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Number_Of_TT_Cond_Creation_Def__c</fullName>
        <label>Number of Tactic Temp Cond Creation Def</label>
        <summaryForeignKey>ACCL__Tactic_Template_Cond_Creation_Def__c.ACCL__Tactic_Template__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Relevant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Possible_Lift_Types__c</fullName>
        <label>Possible Lift Types</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ACCL__Tactic_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                    <default>true</default>
                    <label>Percentage</label>
                </value>
                <value>
                    <fullName>Percentage/Absolute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Tactic_Total_Amount__c</fullName>
        <description>This field contains the api name of the Tactic field which should provide total amount for a tactic to be used in progress bar or other functional process. Pick list uses translated values</description>
        <label>Tactic Total Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plan_Spend__c</fullName>
                    <default>true</default>
                    <label>Plan Spend</label>
                </value>
                <value>
                    <fullName>LE_Spend__c</fullName>
                    <label>LE Spend</label>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Tactic_Type__c</fullName>
        <description>Specifies the type of a tactic</description>
        <inlineHelpText>Specifies the type of a tactic</inlineHelpText>
        <label>Tactic Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                    <default>true</default>
                    <label>Retail</label>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>DisplayPerAbs</fullName>
                </value>
                <value>
                    <fullName>PriceReduction</fullName>
                </value>
                <value>
                    <fullName>PriceReductionPerAbs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__UI_Contract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contract associated with a template</description>
        <label>UI Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__UI_Contract__c.ACCL__Usage__c</field>
                <operation>equals</operation>
                <value>Tactic</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__UI_Contract__c</referenceTo>
        <relationshipLabel>Tactic Templates</relationshipLabel>
        <relationshipName>Tactic_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tactic Template</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Tactic_Type__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__UI_Contract__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Tactic Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tactic Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__ConditionCreationOn_ChangeRuleNotEmpty</fullName>
        <active>true</active>
        <description>Condition Change Rule field cannot be empty if Enable Condition Creation is selected.</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(ACCL__Condition_Creation_Definition_Level__c , &apos;tactic&apos;)),
ACCL__Enable_Condition_Creation__c = true,
ISBLANK(TEXT(ACCL__Condition_Change_Rule__c))
)</errorConditionFormula>
        <errorDisplayField>ACCL__Condition_Change_Rule__c</errorDisplayField>
        <errorMessage>Condition Change Rule field cannot be empty if Enable Condition Creation is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__ConditionCreationOn_CondDefLevelNotEmpty</fullName>
        <active>true</active>
        <description>Condition Creation Definition Level field cannot be empty if Enable Condition Creation is selected.</description>
        <errorConditionFormula>AND(ACCL__Enable_Condition_Creation__c, ISPICKVAL(ACCL__Condition_Creation_Definition_Level__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>ACCL__Condition_Creation_Definition_Level__c</errorDisplayField>
        <errorMessage>Condition Creation Definition Level field cannot be empty if Enable Condition Creation is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__ConditionCreationOn_ProductGroupNotEmpty</fullName>
        <active>true</active>
        <description>Condition Product Group Level field cannot be empty if Enable Condition Creation is selected.</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(ACCL__Condition_Creation_Definition_Level__c , &apos;tactic&apos;)),
ACCL__Enable_Condition_Creation__c = true,
ISBLANK(TEXT(ACCL__Condition_Product_Group_Level__c)))</errorConditionFormula>
        <errorDisplayField>ACCL__Condition_Product_Group_Level__c</errorDisplayField>
        <errorMessage>Condition Product Group Level field cannot be empty if Enable Condition Creation is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__ConditionCreationOn_SourceKPINotEmpty</fullName>
        <active>true</active>
        <description>Condition Source KPI field cannot be empty if Enable Condition Creation is selected.</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(ACCL__Condition_Creation_Definition_Level__c , &apos;tactic&apos;)),
ACCL__Enable_Condition_Creation__c = true,
ISBLANK(ACCL__Condition_Source_Kpi__c))</errorConditionFormula>
        <errorDisplayField>ACCL__Condition_Source_Kpi__c</errorDisplayField>
        <errorMessage>Condition Source KPI field cannot be empty if Enable Condition Creation is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__ConditionSourceKPI_BoMScope</fullName>
        <active>true</active>
        <description>The BOM Scope of Condition Source KPI must contain &apos;Product&apos;</description>
        <errorConditionFormula>AND( ACCL__Enable_Condition_Creation__c, NOT( ISBLANK(ACCL__Condition_Source_Kpi__c)), NOT(INCLUDES(ACCL__Condition_Source_Kpi__r.ACCL__BoM_Scope__c, &apos;Product&apos;)))</errorConditionFormula>
        <errorDisplayField>ACCL__Condition_Source_Kpi__c</errorDisplayField>
        <errorMessage>The BOM Scope of Condition Source KPI must contain
&apos;Product&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__ConditonSourceKPI_EditableWithTotal</fullName>
        <active>true</active>
        <description>The KPI is only allowed to have record type &apos;Editable&apos; and edit mode &apos;Total&apos;.</description>
        <errorConditionFormula>AND(ACCL__Enable_Condition_Creation__c = true, AND(NOT(ISBLANK(ACCL__Condition_Source_Kpi__c)), OR(ACCL__Condition_Source_Kpi__r.RecordType.DeveloperName &lt;&gt; &apos;editable&apos;,NOT(ISPICKVAL(ACCL__Condition_Source_Kpi__r.ACCL__Editable_Edit_Mode__c, &apos;total&apos;)))))</errorConditionFormula>
        <errorDisplayField>ACCL__Condition_Source_Kpi__c</errorDisplayField>
        <errorMessage>The KPI is only allowed to have record type &apos;Editable&apos; and edit mode &apos;Total&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__ConditonSourceKPI_Scope</fullName>
        <active>true</active>
        <description>The object scope of the selected KPI must be &apos;Promotion Tactic&apos;</description>
        <errorConditionFormula>AND(ACCL__Enable_Condition_Creation__c = true, AND(NOT(ISBLANK(ACCL__Condition_Source_Kpi__c)), NOT(ISPICKVAL(ACCL__Condition_Source_Kpi__r.ACCL__Scope__c, &apos;promotiontactic&apos;))))</errorConditionFormula>
        <errorDisplayField>ACCL__Condition_Source_Kpi__c</errorDisplayField>
        <errorMessage>The object scope of the selected KPI must be &apos;Promotion Tactic&apos;</errorMessage>
    </validationRules>
</CustomObject>